rmi: made dto(s) serializables, fixed json loading, removed .getFirst() instances